--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
+
+body {
+  @apply bg-slate-100 text-slate-900 dark:bg-slate-900 dark:text-slate-100;
+  @apply transition-colors duration-300;
+  @apply font-sans;
+  @apply antialiased;
+}
+
 @tailwind utilities;
